--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bookshop
 spring.datasource.username=root
 spring.datasource.password=minhduc123456
 spring.jpa.hibernate.ddl-auto=none
+spring.devtools.add-properties = true
 
